--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -6,12 +6,7 @@
     <link th:href="@{/css/products.css}" rel="stylesheet">
 </head>
 <body>
-<header class="header">
-    <div class="header-contents">
-        <div class="javajo-jewels">Java女宝石</div>
-        <a href=""><img class="cart-icon" th:src="@{/images/shopping-cart.svg}"/></a>
-    </div>
-</header>
+<header th:replace="fragments/header :: header"></header>
 
 <main class="main">
     <div class="main-contents">
