--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -10,41 +10,45 @@
 
 <main class="main">
     <div class="main-contents">
-        <h1 class="title">あなたのカート</h1>
+        <div class="title-wrapper-with-link">
+            <h1 class="title">あなたのカート</h1>
+            <a th:href="|/products|" class="underlined-link">買い物を続ける</a>
+        </div>
 
-        <div class="cart">
-        <table class="borderless-table">
+        <table class="cart-items">
             <thead>
             <tr>
-                <th>商品</th>
-                <th>合計</th>
+                <th class="caption-with-letter-spacing" colspan="2" scope="col">商品</th>
+                <th class="right caption-with-letter-spacing" colspan="1" scope="col">合計</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="product : ${cart.products}">
-                <td>
-                    <div class="product">
-                    <img th:src="${product.imageUrl}"/>
+            <tr th:each="product : ${cart.products}" class="cart-item">
+                <td class="cart-item__media">
+                    <img th:src="${product.imageUrl}" class="cart-item__image" alt="" loading="lazy" width="150"
+                         height="150"/>
+                </td>
+                <td class="cart-item__detail">
                     <div class="product-title" th:text="${product.name}"></div>
                     <div th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|"></div>
-                    </div>
                 </td>
-                <td th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|"></td>
+                <td th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|"
+                    class="cart-item__total right"></td>
             </tr>
             </tbody>
         </table>
+    </div>
+</main>
+<main class="main">
+    <div class="cart-summary">
+        <div class="total-amount">
+            <h2 class="total-label">合計金額</h2>
+            <p class="total-price" th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></p>
         </div>
-        <div class="cart-summary">
-            <div class="total-amount">
-                <span class="total-label">合計金額</span>
-                <span class="total-price" th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></span>
-            </div>
-
-            <div class="order-button-area">
-                <form th:action="@{/order}" method="post">
-                    <button type="submit" class="order-button">注文する</button>
-                </form>
-            </div>
+        <div class="order-button-area">
+            <form th:action="@{/order}" method="post">
+                <button type="submit" class="cart-button">注文する</button>
+            </form>
         </div>
     </div>
 </main>
