--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,8 +14,8 @@
         <div class="cart-grid">
             <!-- ヘッダー部分 -->
             <div class="cart-header">
-                <div class="cart-header-item" style="width: 50%">商品</div>
-                <div class="cart-header-item">合計</div>
+                <div class="cart-header-item">商品</div>
+                <div class="cart-header-item-total">合計</div>
             </div>
 
             <!-- 商品アイテム部分 -->
@@ -25,7 +25,11 @@
                         <img th:src="${product.imageUrl}" alt="商品画像" class="cart-item-image"/>
                         <div class="cart-item-details">
                             <div class="cart-item-name" th:text="${product.name}"></div>
-                            <div th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|" class="cart-item-price"></div>
+                            <form th:action="@{/cart/products/{id}(id=${product.id})}" th:method="delete">
+                                <button type="submit" class="cart-item-remove">
+                                    <img class="garbage-icon" th:src="@{/images/garbage.svg}"/>
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -38,7 +42,7 @@
                 <p class="total-price" th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></p>
             </div>
             <div class="order-button-area">
-                <form th:action="@{/order}" method="post">
+                <form th:action="@{/api/orders}" method="post">
                     <button type="submit" class="order-button">注文する</button>
                 </form>
             </div>
