--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -12,9 +12,85 @@
 }
 
 .title {
-  border-left: solid #D5C9BB 4px;
   padding-left: 8px;
+  border-left: solid #D5C9BB 4px;
   font-size: 24px;
+}
+
+.cart-grid {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 48px;
+  padding-right: 48px;
+}
+
+.cart-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px 0;
+  border-bottom: 1px solid #EFEFEF;
+}
+
+.cart-header-item {
+  padding: 0 10px;
+}
+
+.cart-header-item-total {
+  padding: 0 10px;
+  text-align: left;
+}
+
+.cart-row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 15px 0;
+}
+
+.cart-cell {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  padding: 0 10px;
+}
+
+.cart-item-info {
+  display: flex;
+  gap: 15px;
+}
+
+.cart-item-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+
+.cart-item-details {
+  flex-grow: 1;
+}
+
+.cart-item-name {
+  font-size: 14px;
+}
+
+.cart-item-total {
+  font-size: 14px;
+  text-align: left;
+}
+
+.garbage-icon {
+  width: 20px;
+}
+
+.cart-item-remove {
+  padding: 0.5rem;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 .cart-summary {
@@ -42,83 +118,7 @@
 .order-button {
   width: 100%;
   height: 48px;
-  color: white;
-  background-color: #121212;
   border-radius: 4px;
-}
-
-.cart-grid {
-  display: flex;
-  flex-direction: column;
-  padding-left: 48px;
-  padding-right: 48px;
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.cart-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0;
-  border-bottom: 1px solid rgb(239, 239, 239);
-}
-
-.cart-header-item {
-  padding: 0 10px;
-}
-
-.cart-header-item-total {
-  padding: 0 10px;
-  text-align: left;
-}
-
-.cart-row {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 0;
-  width: 100%;
-}
-
-.cart-cell {
-  padding: 0 10px;
-  display: flex;
-  align-items: center;
-  width: 50%;
-}
-
-.cart-item-info {
-  display: flex;
-  gap: 15px;
-}
-
-.cart-item-image {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-}
-
-.cart-item-name {
-  font-size: 14px;
-}
-
-.cart-item-details {
-  flex-grow: 1;
-}
-
-.cart-item-total {
-  text-align: left;
-  font-size: 14px;
-}
-
-.garbage-icon {
-  width: 20px;
-}
-
-.cart-item-remove {
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0.5rem;
+  background-color: #121212;
+  color: white;
 }
