--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -6,7 +6,7 @@
     <link th:href="@{/css/products.css}" rel="stylesheet">
 </head>
 <body>
-<header th:replace="fragments/header :: header"></header>
+<header th:replace="~{fragments/header :: header}"></header>
 
 <main class="main">
     <div class="main-contents">
