--- a/src/main/resources/static/css/product-detail.css
+++ b/src/main/resources/static/css/product-detail.css
@@ -17,24 +17,24 @@
   gap: 24px;
 }
 
-.image {
+.product-image {
   width: 480px;
   height: fit-content;
 }
 
-.product-contents {
+.product-detail {
   width: 360px;
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
-.title {
+.product-title {
   font-size: 20px;
   font-weight: 700;
 }
 
-.price {
+.product-price {
   font-size: 24px;
   font-weight: 700;
   color: #f02e00;
@@ -48,6 +48,6 @@
   border-radius: 4px;
 }
 
-.description {
+.product-description {
   font-size: 14px;
 }
