--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,6 +23,7 @@ button {
 .header-contents {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 1200px;
   padding-left: 48px;
   padding-right: 48px;
