--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,1 +1,46 @@
-カート
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link th:href="@{/css/cart.css}" rel="stylesheet">
+</head>
+<body>
+<header th:replace="~{fragments/header :: header}"></header>
+
+<main class="main">
+    <div class="main-contents">
+        <h1 class="title">あなたのカート</h1>
+
+        <div class="products">
+            <a th:href="|/products/${product.id}|" th:each="product : ${cart.products}">
+                <div class="product">
+                    <img class="product-image" th:src="${product.imageUrl}" />
+                    <div class="product-detail">
+                        <div th:text="${product.name}"></div>
+                        <div class="product-price" th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|"></div>
+
+                        <form th:action="@{/cart}" th:method="delete">
+                            <input type="hidden" name="productId" th:value="${product.id}" />
+                            <button type="submit" class="no-decoration-button">
+                                <img class="trash-icon" th:src="@{/images/trash.svg}" />
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="total-contents">
+            <div class="total-amount">
+                合計: <span th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></span>
+            </div>
+
+            <form th:action="@{/orders}" th:method="post">
+                <button type="submit" class="order-button">注文する</button>
+            </form>
+        </div>
+    </div>
+</main>
+</body>
+</html>
