画面の追加と修正
* 注文完了画面追加
* OrderControllerとOrderServiceのつなぎの修正
* 注文完了画面で注文IDが必要だったため、OrderServiceで注文IDを返却するように修正
* カート画面の修正
    - カートの中がない場合、画面自体が表示されない件の対処
    - カートの中が0円の場合、合計金額をださずにカートが空である旨を出力する対処
* テストクラスのimport文を完全修飾に修正（アスタリスクを使うのをやめた）

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -30,12 +30,14 @@
         </div>
 
         <div class="total-contents">
-            <div class="total-amount">
+            <div class="total-amount" th:if="${cart.totalAmount != 0}">
                 合計: <span th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></span>
             </div>
-
+            <div class="total-amount" th:if="${cart.totalAmount == 0}">
+                カートが空です。
+            </div>
             <form th:action="@{/orders}" th:method="post">
-                <button type="submit" class="order-button">注文する</button>
+                <button type="submit" class="order-button" th:if="${cart.totalAmount !=0}">注文する</button>
             </form>
         </div>
     </div>
