指摘事項の反映
* OrderService
    - varを使っていた箇所があったので是正しました。
    - 返却値を注文番号ではなく、注文そのものを返却するようにしました。
* Orderが持つ商品はProductではなく、OrderProductに変更しました。
* OrderController
    - varを使っていた箇所があったので是正しました。
    - 返却値の変更に伴う修正をしました。
* 注文完了画面
    - レイアウトを修正しました。
    - 注文日時、合計も表示するようにしました。（OrderはList<OrderProduct>を持ってはいますが、画面が冗長になるので出力はしていません。）
* カート画面
    - EL式の冗長なところをやめました。
    - セッションが空の場合の処理を是正しました。

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -11,12 +11,18 @@
 <main class="main">
     <div class="main-contents">
         <h1 class="title">注文完了</h1>
-        <div>注文ありがとうございました。またのお買い上げをお待ちしております。</div>
-        <div class="order-contents">
-            <div class="order-id">
-                注文番号：<span th:text="${orderId}"></span>
+            <div>注文ありがとうございました。またのお買い上げをお待ちしております。</div>
+            <div class="order-contents">
+                <div class="order-id">
+                    注文番号：<span th:text="${order.orderId}"></span>
+                </div>
+                <div>
+                    注文日時：<span th:text="${order.orderDate}"></span>
+                </div>
+                <div>
+                    合計： <span th:text="|¥${#numbers.formatInteger(order.totalAmount, 3, 'COMMA')}|"></span>
+                </div>
             </div>
-        </div>
     </div>
 </main>
 </body>
