--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -29,13 +29,15 @@
             </div>
         </div>
 
-        <div class="total-contents">
-            <div class="total-amount" th:if="${cart.totalAmount != 0}">
+        <div class="total-amount" th:if="${cart.totalAmount == 0}">
+            カートが空です。
+        </div>
+
+        <div class="total-contents" th:if="${cart.totalAmount != 0}">
+            <div class="total-amount" >
                 合計: <span th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></span>
             </div>
-            <div class="total-amount" th:if="${cart.totalAmount == 0}">
-                カートが空です。
-            </div>
+
             <form th:action="@{/orders}" th:method="post">
                 <button type="submit" class="order-button" th:if="${cart.totalAmount !=0}">注文する</button>
             </form>
