指摘事項の反映
* OrderServiceのフォーマットがおかしかったので是正しました。
* オーダー完了画面のスタイルを見直しました。
* CartControllerの不備を是正しました。
* カート画面のスタイルを修正しました。（不要なクラスの削除）

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="total-amount" th:if="${cart.totalAmount == 0}">
+        <div th:if="${cart.totalAmount == 0}">
             カートが空です。
         </div>
 
