--- a/src/main/resources/static/css/order.css
+++ b/src/main/resources/static/css/order.css
@@ -17,16 +17,10 @@
   font-size: 24px;
 }
 
-.order-contents {
-  justify-content: space-between;
-  align-items: center;
-  border-top: solid #12121233 1px;
-  padding-top: 16px;
-  margin-bottom: 48px;
+.order {
+  margin-top: 32px;
 }
 
-.order-id {
-  font-size: 18px;
-  font-weight: 700;
+.order-detail {
+  margin-top: 20px;
 }
-
