--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link th:href="@{/css/style.css}" rel="stylesheet">
-    <link th:href="@{/css/order.css}" rel="stylesheet">
+    <link th:href="@{/css/complete.css}" rel="stylesheet">
 </head>
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
