--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -13,16 +13,16 @@
         <h1 class="title">あなたのカート</h1>
 
         <div class="products">
-            <div class="product" th:each="product : ${cart.products}">
-                <img class="product-image" th:src="${product.imageUrl}" />
+            <div th:each="product : ${cart.products}" class="product">
+                <img th:src="@{${product.imageUrl}}" class="product-image"/>
                 <div class="product-detail">
                     <div th:text="${product.name}"></div>
-                    <div class="product-price" th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|"></div>
+                    <div th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|" class="product-price"></div>
 
                     <form th:action="@{/cart}" th:method="delete">
-                        <input type="hidden" name="productId" th:value="${product.id}" />
+                        <input type="hidden" name="productId" th:value="${product.id}"/>
                         <button type="submit" class="no-decoration-button">
-                            <img class="trash-icon" th:src="@{/images/trash.svg}" />
+                            <img th:src="@{/images/trash.svg}" class="trash-icon"/>
                         </button>
                     </form>
                 </div>
@@ -33,13 +33,13 @@
             カートが空です。
         </div>
 
-        <div class="total-contents" th:if="${cart.totalAmount != 0}">
+        <div th:if="${cart.totalAmount != 0}" class="total-contents">
             <div class="total-amount" >
                 合計: <span th:text="|¥${#numbers.formatInteger(cart.totalAmount, 3, 'COMMA')}|"></span>
             </div>
 
             <form th:action="@{/orders}" th:method="post">
-                <button type="submit" class="order-button" th:if="${cart.totalAmount !=0}">注文する</button>
+                <button type="submit" class="order-button">注文する</button>
             </form>
         </div>
     </div>
