--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -13,10 +13,10 @@
         <h1 class="title">全ての商品</h1>
 
         <div class="products">
-            <a th:href="|/products/${product.id}|" th:each="product : ${products}">
+            <a th:each="product : ${products}" th:href="@{|/products/${product.id}|}">
                 <div class="product">
-                    <img th:src="${product.imageUrl}"/>
-                    <div class="product-title" th:text="${product.name}"></div>
+                    <img th:src="@{${product.imageUrl}}"/>
+                    <div th:text="${product.name}" class="product-title"></div>
                     <div th:text="|¥${#numbers.formatInteger(product.price, 3, 'COMMA')}|"></div>
                 </div>
             </a>
