--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -22,7 +22,7 @@
                         注文日時：<span th:text="${order.orderDate}"></span>
                     </div>
                     <div>
-                        合計： <span th:text="|¥${#numbers.formatInteger(order.totalAmount, 3, 'COMMA')}|"></span>
+                        合計： <span th:text="|¥${#numbers.formatInteger(order.amount, 3, 'COMMA')}|"></span>
                     </div>
                 </div>
             </div>
