--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -12,18 +12,19 @@
     <div class="main-contents">
         <h1 class="title">注文完了</h1>
 
-        <div class="order">
+        <div class="ordered-message">
             注文ありがとうございました。またのお買い上げをお待ちしております。
-            <div class="order-detail">
-                <div>
-                    注文番号：<span th:text="${order.orderId}"></span>
-                </div>
-                <div>
-                    注文日時：<span th:text="${order.orderDate}"></span>
-                </div>
-                <div>
-                    合計： <span th:text="|¥${#numbers.formatInteger(order.amount, 3, 'COMMA')}|"></span>
-                </div>
+        </div>
+
+        <div class="order-detail">
+            <div>
+                注文番号：<span th:text="${order.orderId}"></span>
+            </div>
+            <div>
+                注文日時：<span th:text="${order.orderDate}"></span>
+            </div>
+            <div>
+                合計： <span th:text="|¥${#numbers.formatInteger(order.amount, 3, 'COMMA')}|"></span>
             </div>
         </div>
     </div>
