リファクタリング

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<header class="header" xmlns:th="http://www.thymeleaf.org" th:fragment="header">
+<header xmlns:th="http://www.thymeleaf.org" th:fragment="header" class="header">
     <div class="header-contents">
         <a th:href="@{/products}" class="javajo-jewels">Java女宝石</a>
         <a th:href="@{/cart}"><img th:src="@{/images/shopping-cart.svg}" class="cart-icon"/></a>
